# modtryas

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: android.yml  build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  game.h  hack.cpp  hack.h  main.cpp
app/src/main/java/com/android/support/: Launcher.java  LibraryLoader.java  Main.java  MainActivity.java
app/src/main/java/com/musk/injectv1/: App.java  Auth.java  ESPView.java  Floater.java  MainActivity.java  Prefs.java  RunnigTask.java  Typefaces.java  Utils.java
app/src/main/java/com/perfare/il2cppdumper/: MainActivity.java  PackageUtils.java
app/src/main/java/uk/lgl/modmenu/: FloatingModMenuService.java  NepCaller.java  NepRoot.java
app/src/main/jni/: CMakeLists.txt  Main.cpp
app/src/main/jni/Engine/: Il2Cpp.cpp  Il2Cpp.h  Tools.cpp  Tools.h
app/src/main/jni/FunHax/: Rendika.hpp
app/src/main/jni/Includes/: Logger.h  Macros.h  Utils.h
app/src/main/jni/Menu/: Setup.h
app/src/main/jni/Substrate/: SymbolFinder.cpp
app/src/main/jni/src/: CMakeLists.txt  Client.cpp  Server.cpp  mm.h
app/src/main/jni/src/CANVAS/: ESP.h
app/src/main/jni/src/Inject/: inject.cpp  inject.h  inject_main.cpp
app/src/main/jni/src/Socket/: SocketClient.cpp  SocketServer.cpp
app/src/main/jni/src/Unity/: Global.h  Hook.h
app/src/main/res/: activity_main.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
